--- a/getting-started/create-account.mdx
+++ b/getting-started/create-account.mdx
@@ -1,14 +1,52 @@
 ---
 title: 'Create an Account'
-description: 'Learn how to create your PremiereGPT account'
+description: 'Get started with Première Copilot by creating your account and accessing the dashboard.'
 icon: 'user-plus'
 ---
 
-# Create an Account
+## Creating an Account
 
-To start using PremiereGPT, you need to create an account.
+To begin using Première Copilot, you must first create a user account.
 
-1. Go to the [PremiereGPT Sign Up page](https://create.premieregpt.com).
-2. Enter your email and password.
-3. Verify your email address.
-4. Log in to start using the tool!
+<Steps>
+  <Step title="Navigate to the website">
+    Go to the [Première Copilot website](https://premierecopilot.com).
+  </Step>
+  <Step title="Start the process">
+    Click on the **"Download for free"** button located at the top right of the page.
+  </Step>
+  <Step title="Enter details">
+    Fill out the form with your first name, last name, and other required details.
+  </Step>
+  <Step title="Sign up">
+    Click **"Sign up"**.
+  </Step>
+  <Step title="Verify email">
+    **Verify your email:** Go to your inbox and validate your account by clicking the confirmation link.
+  </Step>
+</Steps>
+
+<Note>
+  **Note:** Upon signing up, you will receive a promo code to purchase the "Podcast" plugin at a discounted rate.
+</Note>
+
+## Accessing the Dashboard
+
+Once verified, return to the website and click **"Sign in"** to access your dashboard. From here, you can:
+
+<CardGroup cols={2}>
+  <Card title="Download App" icon="download">
+    Download the latest version of the application.
+  </Card>
+  <Card title="Book a Demo" icon="calendar">
+    Schedule a demo to learn more features.
+  </Card>
+  <Card title="Join Discord" icon="discord">
+    Join our community on Discord.
+  </Card>
+  <Card title="Affiliate Code" icon="ticket">
+    Access your promo code for referrals.
+  </Card>
+</CardGroup>
+
+![Dashboard Placeholder](/images/dashboard.png)
