--- a/features/jump-cut.mdx
+++ b/features/jump-cut.mdx
@@ -20,7 +20,7 @@ This tool automatically removes silence from your footage. It is approximately *
   </Step>
 </Steps>
 
-![Jump Cut Interface Placeholder](/images/jump-cut.png)
+![Jump Cut Interface Placeholder](/images/jumpcut.png)
 
 ## Parameters
 
