--- a/features/multicam-editing.mdx
+++ b/features/multicam-editing.mdx
@@ -14,7 +14,7 @@ Access this feature by clicking the **Microphone icon** (bottom left) in the ext
   - **Sync:** Ensure all audio and video tracks are synchronized before starting.
 </Warning>
 
-![Timeline Setup Placeholder](/images/timeline-setup.png)
+![Timeline Setup Placeholder](/images/podcast.png)
 
 ## Configuration
 
