--- a/getting-started/installation.mdx
+++ b/getting-started/installation.mdx
@@ -56,4 +56,4 @@ icon: 'download'
   </Step>
 </Steps>
 
-![Extension Menu Placeholder](/images/extension-menu.png)
+![Extension Menu Placeholder](/images/starting.png)
