--- a/support/community.mdx
+++ b/support/community.mdx
@@ -7,10 +7,10 @@ icon: 'headset'
 If you require assistance, we have several channels available to help you.
 
 <CardGroup cols={3}>
-  <Card title="Join Discord" icon="discord" href="https://discord.gg/premierecopilot">
+  <Card title="Join Discord" icon="discord" href="https://discord.gg/WyBNCbZhBD">
     Accessible via the Dashboard or the "Join Discord" button.
   </Card>
-  <Card title="Book a Demo" icon="calendar" href="https://premierecopilot.com/demo">
+  <Card title="Book a Demo" icon="calendar" href="https://cal.com/louis-bolzinger/premieregpt-live-demo-faq">
     Click "Book a demo" in your account to schedule a session.
   </Card>
   <Card title="Email Support" icon="envelope" href="mailto:admin@premieregpt.com">
